--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
-  text-align: center;
+  margin: 2%
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.column1 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  padding: 1rem;
+
+}
+.column2 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  padding: 1rem;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.stock_table {
+  padding: 4%;
+  padding-left: 8%;
+
+}
+.chart {
+  padding: 4%;
+  padding-left: 8%;
+  width: 100%;
+
+}
+
+
+@media only screen and (max-width: 600px) {
+  .App {
+    margin: 2%;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .column1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    padding: 1rem;
   }
-  to {
-    transform: rotate(360deg);
+  .column2 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    padding: 1rem;
   }
+  .stock_table {
+    padding-left: 4%;
+  }
+  
 }
+
+.app_container {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto;
+}
+
